fix: cards alignment

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   outline: 0;
-  box-sizing: border-box; 
+  box-sizing: border-box;
 }
 
 :root {
@@ -27,7 +27,6 @@
 body {
   background-color: var(--body-bg-color);
   color: var(--text-color);
-  padding: 40px;
 
   display: flex;
   flex-direction: row;
@@ -45,12 +44,13 @@ a {
   color: inherit;
   text-decoration: none;
 }
-/* 
+/*
   *custom individual
 */
 
 .sidebar {
   width: 30%;
+  padding: 40px;
 
   display: flex;
   justify-content:center;
@@ -97,17 +97,19 @@ main {
 /* main */
 main {
   padding-left: 60px;
+  padding: 10px 40px 40px 20px;
 }
 
 /* My Projects */
 
-.my-projects {
+.title {
   width: 100%;
   height: 86px;
   background-color: var(--bg-cards);
   border-radius: 20px;
   box-shadow: 2px 2px black;
   padding: 30px;
+  margin-top: 30px;
 
   display: flex;
   flex-direction: row;
@@ -115,7 +117,7 @@ main {
   align-items: center;
 }
 
-.my-projects p {
+.title p {
   font-size: 1.25rem;
   font-weight: bold;
   line-height: 0.375rem;
